# alice

./: .gitignore  Cargo.toml
src/: lib.rs
src/algebra/: bch.rs  lie_algebra.rs  mod.rs
src/core/: mod.rs  module.rs  morphism.rs  ops.rs  ring.rs  scalar.rs
src/groups/: mod.rs
src/maps/: adjoint.rs  exp_log.rs  faer_bridge.rs  mod.rs
src/topology/: manifold.rs  maps.rs  metric.rs  mod.rs  properties.rs  smooth.rs  space.rs
tests/: axioms.proptest-regressions  axioms.rs  exp_log_test.rs  lie_algebra_tests.rs  space_axioms.rs
