[package]
name = "alice"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []

[dependencies]
libm = "0.2.16"
serde = "1.0.228"

[dev-dependencies]
proptest = "1.11.0"

[[test]]
name = "axioms"
path = "tests/axioms.rs"
 
[[test]]
name = "space_axioms"
path = "tests/space_axioms.rs"

[profile.test]
opt-level = 1
