[package]
name = "alice"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []

[dependencies]
faer = "0.24.0"
libm = "0.2.16"
num-complex = "0.4.6"
serde = "1.0.228"

[dev-dependencies]
proptest = "1.11.0"

[[test]]
name = "axioms"
path = "tests/axioms.rs"
 
[[test]]
name = "space_axioms"
path = "tests/space_axioms.rs"

[[test]]
name = "lie_algebra"
path = "tests/lie_algebra_test.rs"

[[test]]
name = "exp_log_tests"
path = "tests/exp_log_test.rs"

[[test]]
name = "group_tests"
path = "tests/group_tests.rs"

[profile.test]
opt-level = 1
